Prevent layout shift when scrollbar appears

--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -5,3 +5,13 @@
 .section {
   margin-top: 48px;
 }
+
+.app {
+  height: 100vh;
+  overflow: scroll;
+
+  @supports (scrollbar-gutter: stable) {
+    overflow: auto;    
+    scrollbar-gutter: stable;  
+  }
+}
